# reveal.js-gallery

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  Rocket.toml  installer.sh
.github/workflows/: main.yml  rust.yml
src/: lib.rs  main.rs
static/: slides.json
static/css/: material-kit.css
static/data/: profile.json  slides.json  social.json
static/js/: script.js
static/slides/: presentation1.md
templates/: index.html.hbs  presentation.html.hbs
