[package]
name = "presentation-manager-rs"
version = "0.1.0"
authors = ["mattdark"]

[dependencies]
rocket = "0.4"

crossbeam-deque = "0.6.2"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
handlebars = "1.1.0"

[dependencies.rocket_contrib]
version = "0.4"
features = ["handlebars_templates"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "presman"
path = "src/main.rs"
