[package]
name = "reveal-js-gallery"
version = "0.3.0"
authors = ["mattdark"]
edition = '2018'

[dependencies]
rocket = "0.4"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
handlebars = "3.0.1"

[dependencies.rocket_contrib]
version = "0.4"
features = ["handlebars_templates"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "reveal-gallery"
path = "src/main.rs"
